--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/Yushkevich-A-A/ajs/issues"
   },
-  "homepage": "https://github.com/Yushkevich-A-A/ajs#readme"
+  "homepage": "https://github.com/Yushkevich-A-A/ajs#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0"
+  }
 }
