--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "scripts": {
-    "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "babel-loader": "^8.2.2",
-    "webpack": "^5.33.2",
+    "webpack": "^4.39.2",
     "webpack-cli": "^4.6.0"
   }
 }
